bk_ida/gobmkida/c3/search_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/search_persistent_owl_cache/src/engine/persistent.c:1191:25: error: use of undeclared identifier 'byte_9C689C'
v14 = ( unsigned __int8)byte_9C689C[i]; 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/search_persistent_owl_cache/src/obj/1/persistent.o] Error 1
